--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,12 +51,17 @@ jobs:
       with:
         go-version: '1.21'
     
+    - name: Generate release notes
+      uses: release-tools/since@main
+      with:
+        output-file: release_notes.md
+    
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v5
       with:
         distribution: goreleaser
         version: latest
-        args: release --clean
+        args: release --clean --release-notes=release_notes.md
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
