--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -50,39 +50,47 @@ snapshot:
   name_template: "{{ incpatch .Version }}-next"
 
 changelog:
-  sort: asc
-  use: github
-  filters:
-    exclude:
-      - '^docs:'
-      - '^test:'
-      - '^ci:'
-      - '^chore:'
-      - '^style:'
-      - Merge pull request
-      - Merge branch
-  groups:
-    - title: 'New Features'
-      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
-      order: 0
-    - title: 'Bug fixes'
-      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
-      order: 1
-    - title: 'Performance improvements'
-      regexp: '^.*?perf(\([[:word:]]+\))??!?:.+$'
-      order: 2
-    - title: Other
-      order: 999
+  disable: true
 
 release:
   github:
     owner: outofcoffee
     name: mempeak
   name_template: "{{.ProjectName}} v{{.Version}}"
-  header: |
-    ## What's Changed
-    
-    This release contains the following changes:
+  extra_files:
+    - glob: ./since.yaml
+  release_notes:
+    mode: replace
+    header: |
+      ## mempeak {{.Tag}}
+      
+      A Unix command-line tool to monitor peak memory usage of processes.
+    footer: |
+      
+      ---
+      
+      **Installation**
+      
+      Download the appropriate binary for your platform from the assets below, or use:
+      
+      ```bash
+      # Homebrew (macOS/Linux)
+      brew install outofcoffee/tap/mempeak
+      
+      # Go install
+      go install github.com/outofcoffee/mempeak@{{.Tag}}
+      ```
+      
+      **Usage**
+      
+      ```bash
+      mempeak <command> [args...]
+      ```
+      
+      Example:
+      ```bash
+      mempeak python script.py
+      ```
 
 brews:
   - name: mempeak
