--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,17 +51,12 @@ jobs:
       with:
         go-version: '1.21'
     
-    - name: Generate release notes
-      uses: release-tools/since@main
-      with:
-        output-file: release_notes.md
-    
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v5
       with:
         distribution: goreleaser
         version: latest
-        args: release --clean --release-notes=release_notes.md
+        args: release --clean
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GH_RELEASE_TOKEN: ${{ secrets.GH_RELEASE_TOKEN }}
